# docpilot-agentic-rag

./: .gitignore  pyproject.toml
docpilot/: __init__.py
docpilot/cache/: __init__.py  dataset_cache.py
docpilot/core/: __init__.py  config.py  schema.py
docpilot/embedder/: __init__.py  base.py  bge_embedding.py  openai_embedding.py  qwen_embedding.py
docpilot/evaluation/: __init__.py  metrics.py  run_eval.py
docpilot/generation/: __init__.py  answer_generator.py  citation_verifier.py
docpilot/generation/prompt/: builder.py
docpilot/indexing/: __init__.py  loader.py  pipeline.py
docpilot/indexing/chunker/: __init__.py  base.py  fixed_size.py  passthrough.py  semantic.py
docpilot/indexing/loaders/: __init__.py  huggingface.py
docpilot/llm/: __init__.py  base.py  openai_client.py
docpilot/retrieval/: __init__.py  base.py
docpilot/retrieval/post/: __init__.py  context_compressor.py  reranker.py
docpilot/retrieval/pre/: __init__.py  query_expander.py  query_rewriter.py
docpilot/retrieval/search/: __init__.py  dense.py  (+2 more)
docpilot/vector_store/: __init__.py  base.py  chroma_store.py  faiss_store.py
docpilot/workflows/: __init__.py  agent_workflow.py  rag_workflow.py  state_machine.py  tools.py
scripts/: ingest_yolo.py
tests/: conftest.py
tests/test_cache/: test_dataset_cache.py
tests/test_embedder/: test_bge_embedder.py
tests/test_indexing/: test_huggingface_loader.py  test_passthrough_chunker.py  test_pipeline.py
tests/test_integration/: test_ingest_yolo.py  test_ingestion_pipeline.py
tests/test_vector_store/: test_faiss_store.py
(+28 files in other folders)
