[project]
name = "docpilot"
version = "0.1.0"
description = "Agentic RAG pipeline with grounded answer generation and evaluation"
readme = "README.md"
authors = [
    { name = "Iris Guo", email = "irischangguo@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.0",
    "pydantic>=2.0",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
docpilot = "docpilot:main"

[tool.uv_build]
packages = ["docpilot"]

[build-system]
requires = ["uv_build>=0.10.11,<0.11.0"]
build-backend = "uv_build"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
strict = true
python_version = "3.12"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
